css/style.css
/* ... */
.main-menu ul li a:hover:after {
  opacity: 1;
  width: 34px;
}

/*---------------------
	Hero section
-----------------------*/
.hero-slider {
  position: relative;
}

.hero-slider .owl-nav {
  position: absolute;
  display: inline-block;
  right: 150px;
  top: 50%;
  font-size: 20px;
  z-index: 999;
  color: #fff;
}
/* .sticky {
	position: fixed;
	top: 0;
	text-align: right;
	width: 100%;
  }
ul, ol {
	padding-top: 35px;
	padding-right: 25px;
    margin: 0;
} */

/* .hero-slider .owl-nav i {
	margin-left: 2px;
} */

/* .hero-slider .owl-nav .owl-prev {
	display: none;
} */

/* .hero-slider .owl-dots {
	position: absolute;
	bottom: -5px;
	left: 150px;
} */

/* .hero-slider .owl-dots .owl-dot {
	display: inline-block;
	margin-right: 30px;
	color: #fff;
	font-size: 14px;
	padding-bottom: 40px;
	position: relative;
	overflow: hidden;
} */

/* .hero-slider .owl-dots .owl-dot.active span {
	color: #cc1847;
} */

.hero-slider .owl-dots .owl-dot.active:after {
  height: 100%;
}

.hero-slider .owl-dots .owl-dot:after {
  position: absolute;
  content: "";
  width: 2px;
  height: 0;
  left: 50%;
  top: 30px;
  margin-left: -2px;
  background: #fff;
  -webkit-transition: all 0.4s;
  -o-transition: all 0.4s;
  transition: all 0.4s;
}

.hs-item {
  min-height: 950px;
  position: relative;
  display: table;
  width: 100%;
}

.hs-item:after {
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  background: #000;
  opacity: 0.7;
}

.hs-item .hs-text {
  position: relative;
  display: table-cell;
  vertical-align: middle;
  z-index: 2;
}

.hs-item .hs-title {
  color: #fff;
  font-size: 100px;
  font-weight: 300;
  margin-bottom: 40px;
  position: relative;
  left: 150px;
  opacity: 0;
}

.hs-item .hs-des {
  color: #fff;
  font-size: 40px;
  line-height: 1.4;
  position: relative;
  left: 150px;
  opacity: 0;
}

.owl-item.active .hs-item .hs-title,
.owl-item.active .hs-item .hs-des {
  left: 0;
  opacity: 1;
}

.owl-item.active .hs-item .hs-title {
  -webkit-transition: all 0.5s ease 0.6s;
  -o-transition: all 0.5s ease 0.6s;
  transition: all 0.5s ease 0.6s;
}

.owl-item.active .hs-item .hs-des {
  -webkit-transition: all 0.5s ease 0.8s;
  -o-transition: all 0.5s ease 0.8s;
  transition: all 0.5s ease 0.8s;
}

/*---------------------
	Intro section
-----------------------*/
/* .intro-text {
  padding-top: 70px;
} */

.intro-text p {
  margin-bottom: 50px;
}

/*---------------------
	Portfolio section
-----------------------*/
.portfolio-header {
  width: 100%;
  background-color: black;
  color: white;
  text-align: center;
  font-size: 30px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 6px;
    padding-bottom: 20px;
}
.portfolio-warp {
  position: relative;
  display: block;
  overflow: hidden;
}
.portfolio-container {
  display: flex;
  flex-direction: row;
  background-color: black;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;

}
.proj {
  width: 100%;
  height: 800px;
  /* border: 1px solid black; */
  text-align: center;

}
.proj p {
  line-height: 1;
}
.proj a {
  padding: 2px 4px;
}
.proj video {
  width:100%;
}
.proj .title {
  color: white;
  font-size: 25px;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 6px;
  padding-bottom: 20px;
}
.single-portfolio {
 
  height: 580px;
  /* width: 33.333333%; */
  width: 50%;
  position: relative;
  float: left;
  display: block;
  background-position: center center;
}

.single-portfolio.sm-wide {
  width: 100%;
}

.single-portfolio:hover .portfolio-info{
  opacity: .90;
}

.portfolio-info {
  position: absolute;
  width: calc(100% - 110px);
  height: calc(100% - 110px);
  left: 55px;
  top: 55px;
  text-align: center;
  padding-top: 50px;
  border: 1px solid #fff;
  overflow: hidden;
  opacity: 0;
  -webkit-transition: all 0.4s;
  -o-transition: all 0.4s;
  transition: all 0.4s;
}

.portfolio-info .pfbg {
  position: absolute;
  width: 110%;
  height: 110%;
  left: -5%;
  top: -5%;
  -webkit-transform: scale(1.12);
  -ms-transform: scale(1.12);
  transform: scale(1.12);
  -webkit-filter: blur(20px);
  filter: blur(20px);
  background-position: center center;
}

.portfolio-info h5 {
  letter-spacing: 2px;
  text-transform: uppercase;
  color: #fff;
  z-index: 9;
  position: relative;
  margin-bottom: 4px;
}
.portfolio-info h4 {
  color: #fff;

}

.portfolio-info p {
  /* font-size: 18px; */
  color: #fff;
  z-index: 9;
  position: relative;
  text-align: left;
  padding-left: 20px;
}

#liveLink-getDev {
  text-align: center;
  letter-spacing: 2.5px;
  text-transform: uppercase;
  background-color: black;
}
#liveLink-sgt {
  text-align: center;
  letter-spacing: 2.5px;
  text-transform: uppercase;
  background-color: white;
}
#liveLink-shoreline {
  text-align: center;
  letter-spacing: 2.5px;
  text-transform: uppercase;
  background-color: white;
}

.portfolio-filter {
  list-style: none;
}

.portfolio-filter li {
  display: inline-block;
  font-size: 12px;
  text-transform: uppercase;
  margin-right: 12px;
  color: #868686;
  font-weight: 600;
  cursor: pointer;
}

.portfolio-filter li.mixitup-control-active {
  color: #111;
}

/*---------------------
	Milestones section
-----------------------*/
.social-media-div {
  padding-top:40px;
  padding-bottom: 40px;
}
.milestones-section {
  background: #222121;
}

.milestones-section .fact-box .fact-content {
  text-align: center;
  position: relative;
}

.milestones-section .fact-box .fact-content:after {
  background: #6f6e6e;
}

.milestones-section .fact-box .fact-content i,
.milestones-section .fact-box .fact-content h2,
.milestones-section .fact-box .fact-content p {
  color: #fff;
}

.milestones-section .fact-box:last-child .fact-content:after {
  display: none;
}

/*---------------------
	tech section
-----------------------*/
#tech-header {
  text-align: center;
  padding-top: 40px;
}
.services-section {
  position: relative;
}

.services-warp {
  position: relative;
}
/* ... */

